Tela de Login e Cadastro adicionadas. Teste de design da tela de Login e Cadastro.

--- a/Front/cadastro.html
+++ b/Front/cadastro.html
@@ -18,8 +18,38 @@
         <div class="login"><a href="cadastro.html"><img src="Midia/futuro_icone.png" alt="usuario"></a></div>
     </header>
     <main>
-        
+        <div class="cadastro">
+            <form action="" method="post">
+                <div class="titulo"><h3>Cadastro</h3></div>
+                <div class="campo-texto">
+                    <label for="nome">Nome</label>
+                    <input type="text" name="nome" id="nome" required>
+                    <label for="email">E-mail</label>
+                    <input type="email" name="email" id="email" required>
+                    <label for="senha">Senha</label>
+                    <input type="password" name="senha" id="senha" required>
+                    <label for="conf-senha">Confirmar Senha</label>
+                    <input type="password" name="conf-senha" id="conf-senha" required>
+                </div>
+                <div class="confirmar">
+                    <input type="checkbox" name="concordar" id="concordar" required>
+                    <label for="concordar">concordo com isso</label>
+                </div>
+                <button type="submit">Confirmar</button>
+                <p>Fazer <a href="login.html">login</a></p>
+            </form>
+        </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="info">
+            <p>lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem</p>
+            <p>lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem</p>
+        </div>
+        <div class="social">
+            <img class="img-social" src="#" alt="#">
+            <img class="img-social" src="#" alt="#">
+            <img class="img-social" src="#" alt="#">
+        </div>
+    </footer>
 </body>
 </html>
