--- a/Front/index.html
+++ b/Front/index.html
@@ -18,6 +18,8 @@
         <div class="login"><a href="cadastro.html"><img src="Midia/futuro_icone.png" alt="usuario"></a></div>
     </header>
     <main></main>
-    <footer></footer>
+    <footer>
+        
+    </footer>
 </body>
 </html>
